--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Sign up</h2>
+<div class = "container">
+
+<h2 class=" pb-3">Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -17,9 +19,11 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+  <div class="form-actions pt-3">
+    <%= f.button :submit, "Sign up" , class: "btn btn-primary "%>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
+
+</div>
