Code Highlighting on Posts

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <div class = "container">
+    <p class="notice text-center"><%= notice %></p>
+    <p class="alert text-center"><%= alert %></p>
     <h1 class = "text-center">What's Poppin Code Snippets</h1>
 </div>
