--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,33 +1,25 @@
+<div class = "container text-center border-bottom mb-5">
 <p id="notice"><%= notice %></p>
 
 <h1>Posts</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Lang</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <% @posts.each do |post| %>
+    
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.lang %></td>
-        <td><%= post.user_id %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class="container text-light">
+      <h2><%= post.title %></h2>
+      <p>By <%=User.find_by_id(post.user_id).email%> | <%= post.lang %><p>
+      
+      <code class = "language-<%=post.lang%> p-1"><%= post.content %></code><br><br>
+      
+      <%= link_to 'Show', post %> | <%= link_to 'Edit', edit_post_path(post) %> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+
+
+  <% end %>
+  
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+
