Added All Langs to highlighting

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
       <h2><%= post.title %></h2>
       <p>By <%=User.find_by_id(post.user_id).email%> | <%= post.lang %><p>
       
-      <pre><code class = "language-<%=post.lang%> p-1" style="width:100%"><%= post.content %></code></pre>
+      <pre class = "line-numbers" data-start="1"><code class = "language-<%=post.lang%> p-1" style="width:100%"><%= post.content %></code></pre>
       <%if post.user_id == current_user.id%>
       <%= link_to 'Show', post %> | <%= link_to 'Edit', edit_post_path(post) %> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
       <%end%>
