--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,9 @@
 <h1>Posts</h1>
 </div>
 
-  <% @posts.each do |post| %>
+  <%# <% @posts.each do |post| %> 
+
+  <%@posts.reverse.each do |post|%>
     
 
     <div class="container text-light">
