--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,8 +17,9 @@
       <p>By <%=post_username%> | <%= post.lang %><p>
       
       <pre class = "line-numbers" data-start="1"><code class = "language-<%=post.lang%> p-1" style="width:100%"><%= post.content %></code></pre>
-      <%if post.user_id == current_user.id%>
-      <%= link_to 'Show', post %> | <%= link_to 'Edit', edit_post_path(post) %> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= link_to 'Show', post %>
+      <%if user_signed_in? && post.user_id == current_user.id%>
+       | <%= link_to 'Edit', edit_post_path(post) %> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
       <%end%>
     </div>
     <br><br>
