--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,29 +1,37 @@
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
   <div class="container-fluid text-light">
-    <a class="navbar-brand text-light" href="#">[Image Here]</a>
+    
+    <a class="navbar-brand" href="<%= root_path%>">
+      <%=image_tag "whatspoppinlogo.png", width: "60", height: "50", class: "d-inline-block align-text-top"%>
+      <%=link_to "Code Snippets", root_path, class: "navbar-brand text-light"%>
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link text-light" aria-current="page" href="#">Home</a>
-        </li>
+        
         <%# if user isnt signed in %>
         <%if !user_signed_in?%>
-        <li class="nav-item">
-          <%=link_to "Sign Up", "/users/sign_up", class: "text-light nav-link"%>
-        </li>
-        <li class="nav-item">
-          <%=link_to "Sign In", "/users/sign_in", class: "text-light nav-link"%>
-        </li>
-        <% elsif user_signed_in? %>
-            <li class="nav-item">
-                <%=link_to "Sign Out", "/users/sign_out", method: "delete", class: " text-light nav-link"%>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'New Post', new_post_path, class: " text-light nav-link" %>
-            </li>
+          <li class="nav-item">
+            <%=link_to "Sign Up", "/users/sign_up", class: "text-light nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%=link_to "Sign In", "/users/sign_in", class: "text-light nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%=link_to "Posts", "/posts", class: "text-light nav-link"%>
+          </li>
+        <% elsif user_signed_in? %>          
+          <li class="nav-item">
+            <%=link_to "Posts", "/posts", class: "text-light nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'New Post', new_post_path, class: " text-light nav-link" %>
+          </li>
+          <li class="nav-item">
+              <%=link_to "Sign Out", "/users/sign_out", method: "delete", class: " text-light nav-link"%>
+          </li>
         <%end %>
         <%# <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,7 +51,7 @@
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>%>
+      </form> %>
     </div>
   </div>
 </nav>
